remove dropdown shifting as an attempt to prevent select 2 bug

--- a/wp-content/themes/split-airport-theme/assets/scss/plugins/select2.scss
+++ b/wp-content/themes/split-airport-theme/assets/scss/plugins/select2.scss
@@ -135,7 +135,3 @@
 .select2-container--default .select2-results > .select2-results__options {
     max-height: 300px !important;
 }
-
-.select2-dropdown--below {
-    transform: translateY(12px);
-}
